Fix: div and selectors aligned

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
 #hd1{
-    background-image: url("img/wizard.jpg");
-    height:         12px;
-    width:          10px;
-    font-family: cursive;  
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: green;  
 }
